@@ -45,5 +45,6 @@ char **GetXDGPath(
 FILE *GetXDGFileData(const char *fileName, const char *mode, char**retFile);
 FILE *GetXDGFileUser(const char *fileName, const char *mode, char **retFile);
 FILE *GetXDGFileTable(const char *fileName, const char *mode, char **retFile, Bool forceUser);
+FILE *GetXDGFilePinyin(const char *fileName, const char *mode, char **retFile);
 void FreeXDGPath(char **path);
 #endif
