@@ -3,7 +3,7 @@ INCLUDES = \
 		   -I$(top_srcdir)/src \
 		   @CAIRO_XLIB_CFLAGS@ \
 		   $(NULL)
-DEFS = -DPKGDATADIR=\"$(pkgdatadir)\"
+DEFS = -DPKGDATADIR=\"$(pkgdatadir)\" -DDATADIR=\"$(datadir)\"
 
 noinst_LIBRARIES=libimpinyin.a
 libimpinyin_a_SOURCES= py.c py.h \
