@@ -169,6 +169,7 @@ MyXEventHandler(XEvent * event)
         break;
     case DestroyNotify:
 #ifdef _ENABLE_TRAY
+        printf("destroy notify\n");
         TrayEventHandler(event);
 #endif
         break;
